Remove outdated Java config examples from `jvm.config` (#6067)
We don't need to document Java 8 / 9 / 11 / 12 specific options when the
minimum required is Java 17.

GitOrigin-RevId: 30010c4140bc1a7e436d1eb4a44b0af2645cf134