@@ -27,36 +27,20 @@
 # GC configuration
 
 # G1GC Configuration
-# Use G1GC on Java 8
+# Use G1GC
 #-XX:+UseG1GC
 #-XX:MaxGCPauseMillis=50
 
 # ZGC
-# Available on Java 11 and forward, does not need -XX:+UnlockExperimentalVMOptions since Java 15
 # See https://wiki.openjdk.java.net/display/zgc/Main
-#-XX:+UnlockExperimentalVMOptions
 #-XX:+UseZGC
 
 # Shenandoah
-# Available on Java 12 and forward, does not need -XX:+UnlockExperimentalVMOptions since Java 15
 # See https://wiki.openjdk.java.net/display/shenandoah/Main
 #-XX:+UseShenandoahGC
 
-# Java 8 GC logging
-#-XX:+PrintGC
-#-Xloggc:$JET_HOME/logs/gc.log
-#-XX:+UseGCLogFileRotation
-#-XX:NumberOfGCLogFiles=32
-#-XX:GCLogFileSize=64m
-
-# Java 8 More detailed GC logging - consider moving the logs location to a RAM disk
-#-XX:+PrintGCDetails
-#-XX:+PrintGCDateStamps
-#-XX:+PrintTenuringDistribution
-#-XX:+PrintGCApplicationStoppedTime
-
-# Java 9+ GC logging
+# Java GC logging
 #-Xlog:gc:file=$JET_HOME/logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m
 
-# Java 9+ More detailed GC logging - consider moving the logs location to a RAM disk
+# Java More detailed GC logging - consider moving the logs location to a RAM disk
 #-Xlog:gc*,gc+age=trace,safepoint:file=$JET_HOME/logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m
